# Octo-Git

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html  preview_main.txt
octo/: .gitignore  __init__.py  __main__.py  core.py
octo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_core.py
